--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ langchain==0.0.257
 openai
 sentence_transformers
 fschat==0.2.20
-transformers
+transformerention
 torch~=2.0.0
 fastapi~=0.99.1
 fastapi-offline
